- added jacoco - cleanup to conform sonarqube rule

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <source>11</source>
         <target>11</target>
+        <sonar.exclusions>**/Application.java</sonar.exclusions>
     </properties>
     <dependencies>
         <dependency>
