--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <zonky.version>1.4.1</zonky.version>
         <flyway-test-extension.version>5.2.1</flyway-test-extension.version>
         <sonarqube.version>3.6.0.1398</sonarqube.version>
+        <jacoco.version>0.8.3</jacoco.version>
         <sonar.host.url>http://localhost:19000</sonar.host.url>
     </properties>
     <dependencyManagement>
@@ -92,6 +93,24 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -119,6 +138,11 @@
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>${sonarqube.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
