--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>backend</module>
+        <module>webcli</module>
     </modules>
     <groupId>me.wordwizard</groupId>
     <artifactId>app</artifactId>
@@ -26,6 +27,9 @@
         <sonarqube.version>3.6.0.1398</sonarqube.version>
         <jacoco.version>0.8.3</jacoco.version>
         <sonar.host.url>http://localhost:19000</sonar.host.url>
+        <frontend.maven.plugin>1.7.5</frontend.maven.plugin>
+        <node.vesion>10.15.3</node.vesion>
+        <angularcli.vesion>7.3.7</angularcli.vesion>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -92,6 +96,15 @@
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sonar</id>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                        <phase>compile</phase>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -143,6 +156,11 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <version>${frontend.maven.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
