--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,25 @@
         <flyway-test-extension.version>5.2.1</flyway-test-extension.version>
         <sonarqube.version>3.6.0.1398</sonarqube.version>
         <jacoco.version>0.8.3</jacoco.version>
-        <sonar.host.url>http://localhost:19000</sonar.host.url>
         <frontend.maven.plugin>1.7.5</frontend.maven.plugin>
         <node.vesion>10.15.3</node.vesion>
         <angularcli.vesion>7.3.7</angularcli.vesion>
+
+        <sonar.host.url>http://sonar.wordwizard.me</sonar.host.url>
     </properties>
     <profiles>
         <profile>
             <id>sonarqube</id>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>11</source>
+                            <target>11</target>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
