--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.hibernate.naming.physical-strategy=me.wordwizard.backend.hibernate.TableQuotedPhysicalNamingStrategy
 spring.jpa.hibernate.ddl-auto=create-drop
