--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=me.wordwizard.backend.hibernate.TableQuotedPhysicalNamingStrategy
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+logging.level.org.hibernate.type.sql=TRACE
