--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+server.port=8443
+server.ssl.key-store=dev.keystore
+server.ssl.key-store-password=changeit
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=server
