--- a/webcli/package.json
+++ b/webcli/package.json
@@ -41,6 +41,7 @@
     "tslib": "^1.9.0",
     "typescript-fsa": "^3.0.0-beta-2",
     "typescript-fsa-reducers": "^1.2.0",
+    "xregexp": "^4.2.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/xregexp": "^3.0.29",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
